--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class = "divider"></div>
         <div class ="infoText">
-          Successfully managing and recovering marine species in today’s busy ocean requires us to understand the entire ecosystem and the suite of impacts on their survival, rather than considering just one species at a time. NOAA Fisheries is using sophisticated ecosystem modeling tools, coupled with input from stakeholders, to explore the tradeoffs inherent in natural resource management decisions. The models incorporate classic population biology and a range of climate, environmental, ecological and human impacts to the ocean. These models, which are relied on by our scientists and managers, provide essential data for making well informed decisions. However, the complexity that makes the models robust can also limit the ability of many audiences to understand and use the information provided. The underlying dynamics of these models are complex, and a new tool aims to show the results of those dynamics in an easy-to-view manner.
+          Successfully managing and recovering marine species in today’s busy ocean requires us to understand the entire ecosystem and the suite of impacts on their survival, rather than considering just one species at a time. NOAA Fisheries is using sophisticated ecosystem modeling tools, coupled with input from stakeholders, to explore the tradeoffs inherent in natural resource management decisions. The models incorporate classic population biology and a range of climate, environmental, ecological and human impacts to the ocean. These models, which are relied on by our scientists and managers, provide essential data for making well informed decisions. However, the complexity that makes the models robust can also limit the ability of many audiences to understand and use the information provided. The underlying dynamics of these models are complex, and new tools aims to show the results of those dynamics in an easy-to-view manner.
         </div>
         <div class="boxcontainer">
             <div class = "box2">
@@ -54,14 +54,14 @@
             </div>
             <div class = "box2">
               <div class ="row"><img id="cert" height="25px" width="25px"> <h2>Validation</h2></div>
-                  Tools and code go through a validation process and areassigned different levels of validation.
+                  Tools and code go through a validation process and are assigned different levels of validation.
 
 
 
             </div>
             <div class = "box2">
               <div class ="row"><img id="checkmark" height="25px" width="25px"> <h2>Support Level</h2></div>
-                  Tools are supported by NOAA support staff at differeing levels depending on the owner of the repository and tools validation level
+                  Tools are supported by NOAA support staff at differing levels depending on the owner of the repository and tools validation level.
 
 
             </div>
