update release badges

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               <div class = "modelType"></div>
 
 
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSVPA_X2?color=%230093D0&amp;include_prereleases"></div>
               <div class = "language"></div>
               <div class = "iconrow">
 
@@ -112,7 +113,7 @@
 
 
 
-                  <button class = "icon_small down" disabled></button>
+                 <button class = "icon_small down" onclick="location.href='https://github.com/NMFS-ecosystem-tools/MSVPA_X2/releases';" value="download app" ></button>
 
 
 
@@ -147,7 +148,7 @@
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSSPM?color=%230093D0&include_prereleases"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSSPM?color=%230093D0&amp;include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -192,6 +193,9 @@
               <div class = "modelType"></div>
 
 
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSCAA?color=%230093D0&amp;include_prereleases"></div>
+
+
               <div class = "language"></div>
               <div class = "iconrow">
 
@@ -199,7 +203,7 @@
 
 
 
-                  <button class = "icon_small down" disabled></button>
+                 <button class = "icon_small down" onclick="location.href='https://github.com/NMFS-ecosystem-tools/MSCAA/releases';" value="download app" ></button>
 
 
 
