add external tools to page

--- a/index.html
+++ b/index.html
@@ -99,6 +99,138 @@
 
 
 
+              <a class = "shortTitle" href= https://research.csiro.au/atlantis/home/about-atlantis/ target= "_blank"> Atlantis </a>
+              <div class = "longTitle">Atlantis</div>
+              <div class = "modelType"></div>
+              <div class = "modelType"></div>
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                 <button class = "icon_small down" onclick="location.href='https://research.csiro.au/atlantis/home/links/';" value="download app" ></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='https://research.csiro.au/atlantis/home/links/';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
+              <a class = "shortTitle" href= http://ecopath.org/ target= "_blank"> EwE </a>
+              <div class = "longTitle">Ecopath with Ecosim</div>
+              <div class = "modelType"></div>
+              <div class = "modelType"></div>
+
+
+              <!-- <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSCAA?color=%230093D0"></div> -->
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                 <button class = "icon_small down" onclick="location.href='https://ecopath.org/downloads/';" value="download app" ></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='http://sources.ecopath.org/trac/Ecopath';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
+              <a class = "shortTitle" href= https://github.com/Hafro/gadget2 target= "_blank"> GADGET </a>
+              <div class = "longTitle">Globally applicable Area-Disaggregated General Ecosystem Toolbox</div>
+              <div class = "modelType"></div>
+              <div class = "modelType"></div>
+
+
+              <!-- <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/Hafro/gadget2?color=%230093D0"></div> -->
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                 <button class = "icon_small down" onclick="location.href='https://github.com/Hafro/gadget2/releases';" value="download app" ></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='https://github.com/Hafro/gadget2';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
               <a class = "shortTitle" href= https://nmfs-ecosystem-tools.github.io/MSVPA_X2 target= "_blank"> MSVPA_X2 </a>
               <div class = "longTitle">Multi-Species Virtual Population Analysis eXtended 2</div>
               <div class = "modelType"></div>
@@ -106,6 +238,8 @@
 
 
               <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSVPA_X2?color=%230093D0&amp;include_prereleases"></div>
+
+
               <div class = "language"></div>
               <div class = "iconrow">
 
@@ -208,6 +342,51 @@
 
 
                  <button class = "icon_small github" onclick="location.href='https://github.com/NMFS-ecosystem-tools/MSCAA';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
+              <a class = "shortTitle" href= http://www.osmose-model.org/ target= "_blank"> OSMOSE </a>
+              <div class = "longTitle">Object-oriented Simulator of Marine Ecosystems</div>
+              <div class = "modelType"></div>
+              <div class = "modelType"></div>
+
+
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/osmose-model/osmose?color=%230093D0"></div>
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                 <button class = "icon_small down" onclick="location.href='https://github.com/osmose-model/osmose/releases';" value="download app" ></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='https://github.com/osmose-model/osmose';" value="Go to online app" ></button>
 
 
                <!--   -->
