--- a/index.html
+++ b/index.html
@@ -141,13 +141,55 @@
 
 
 
+              <a class = "shortTitle" href= https://nmfs-ecosystem-tools.github.io/Donut Tool target= "_blank"> Donut Tool </a>
+              <div class = "longTitle">Prey Preference and Diet Composition Tool</div>
+              <div class = "modelType"></div>
+              <div class = "modelType"></div>
+
+
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/Donut_Tool?color=%230093D0&amp;include_prereleases"></div>
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                 <button class = "icon_small down" onclick="location.href='https://github.com/NMFS-ecosystem-tools/Donut_Tool/releases';" value="download app" ></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='https://github.com/NMFS-ecosystem-tools/Donut_Tool';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
               <a class = "shortTitle" href= http://ecopath.org/ target= "_blank"> EwE </a>
               <div class = "longTitle">Ecopath with Ecosim</div>
               <div class = "modelType"></div>
               <div class = "modelType"></div>
-
-
-              <!-- <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSCAA?color=%230093D0"></div> -->
 
 
               <div class = "language"></div>
@@ -192,7 +234,7 @@
               <div class = "modelType"></div>
 
 
-              <!-- <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/Hafro/gadget2?color=%230093D0"></div> -->
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/tag/Hafro/gadget2?color=%230093D0"></div>
 
 
               <div class = "language"></div>
