typo in donut tool repo name

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 
 
-              <a class = "shortTitle" href= https://nmfs-ecosystem-tools.github.io/Donut Tool target= "_blank"> Donut Tool </a>
+              <a class = "shortTitle" href= https://nmfs-ecosystem-tools.github.io/Donut_Tool target= "_blank"> Donut Tool </a>
               <div class = "longTitle">Prey Preference and Diet Composition Tool</div>
               <div class = "modelType"></div>
               <div class = "modelType"></div>
