--- a/index.html
+++ b/index.html
@@ -78,14 +78,18 @@
 
                       Code repositories associated to the tool are available for developers or users to access. Interested devleopers can make pull requests on the code base.
                 </div>
-                <div class = "box2">
+                <!-- <div class = "box2">
                   <div class ="row"><img class="icon_small cert" > <h2>Validation</h2></div>
                       Tools and code go through a validation process and are assigned different levels of validation.
 
+                </div> -->
+                <div class = "box2">
+                  <div class ="row"><img class="icon_small checkmarkN"> <h2>NOAA Support</h2></div>
+                      Authored by NOAA staff with support at differing levels depending on the owner of the repository and tools validation level.
                 </div>
                 <div class = "box2">
-                  <div class ="row"><img class="icon_small checkmark"> <h2>Support Level</h2></div>
-                      Tools are supported by NOAA support staff at differing levels depending on the owner of the repository and tools validation level.
+                  <div class ="row"><img class="icon_small checkmarkE"> <h2>External Tool</h2></div>
+                      Authored by scientists external to NOAA.
                 </div>
                 </div>
           </nav>
@@ -141,13 +145,13 @@
 
 
 
-              <a class = "shortTitle" href= https://nmfs-ecosystem-tools.github.io/Donut_Tool target= "_blank"> Donut Tool </a>
+              <a class = "shortTitle" href= https://nmfs-ecosystem-tools.github.io/Donut_Tool target= "_blank"> Donut_Tool </a>
               <div class = "longTitle">Prey Preference and Diet Composition Tool</div>
               <div class = "modelType"></div>
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/Donut_Tool?color=%230093D0&amp;include_prereleases"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/Donut_Tool?color=%230093D0&include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -173,7 +177,7 @@
                   <button class = "icon_small cert" disabled></button>
                 <!--  -->
 
-                 <button class = "icon_small external_active " ></button>
+                 <button class = "icon_small internal_active " ></button>
 
 
 
@@ -234,7 +238,7 @@
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/tag/Hafro/gadget2?color=%230093D0"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/tag/Hafro/gadget2?color=%230093D0&include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -279,7 +283,7 @@
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSVPA_X2?color=%230093D0&amp;include_prereleases"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSVPA_X2?color=%230093D0&include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -305,7 +309,7 @@
                   <button class = "icon_small cert" disabled></button>
                 <!--  -->
 
-                 <button class = "icon_small external_active " ></button>
+                 <button class = "icon_small internal_active " ></button>
 
 
 
@@ -324,7 +328,7 @@
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSSPM?color=%230093D0&amp;include_prereleases"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSSPM?color=%230093D0&include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -350,7 +354,7 @@
                   <button class = "icon_small cert" disabled></button>
                 <!--  -->
 
-                 <button class = "icon_small external_active " ></button>
+                 <button class = "icon_small internal_active " ></button>
 
 
 
@@ -369,7 +373,7 @@
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSCAA?color=%230093D0&amp;include_prereleases"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/NMFS-ecosystem-tools/MSCAA?color=%230093D0&include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -395,7 +399,7 @@
                   <button class = "icon_small cert" disabled></button>
                 <!--  -->
 
-                 <button class = "icon_small external_active " ></button>
+                 <button class = "icon_small internal_active " ></button>
 
 
 
@@ -414,7 +418,7 @@
               <div class = "modelType"></div>
 
 
-              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/osmose-model/osmose?color=%230093D0"></div>
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/osmose-model/osmose?color=%230093D0&include_prereleases"></div>
 
 
               <div class = "language"></div>
@@ -478,7 +482,7 @@
                  -->
                   <!--  -->
 
-                 <button class = "icon_small external_active " ></button>
+                 <button class = "icon_small internal_active " ></button>
 
 
 
