add mizer and rpath inital links

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 
               <a class = "shortTitle" href= https://research.csiro.au/atlantis/home/about-atlantis/ target= "_blank"> Atlantis </a>
               <div class = "longTitle">Atlantis</div>
-              <div class = "modelType"></div>
-              <div class = "modelType"></div>
+              <div class = "modelType">model</div>
+              <div class = "modelType">deterministic biogeochemical whole of ecosystem model</div>
 
 
               <div class = "language"></div>
@@ -192,8 +192,8 @@
 
               <a class = "shortTitle" href= http://ecopath.org/ target= "_blank"> EwE </a>
               <div class = "longTitle">Ecopath with Ecosim</div>
-              <div class = "modelType"></div>
-              <div class = "modelType"></div>
+              <div class = "modelType">modeling software suite</div>
+              <div class = "modelType">ecological/ecosystem modeling</div>
 
 
               <div class = "language"></div>
@@ -253,6 +253,51 @@
 
 
                  <button class = "icon_small github" onclick="location.href='https://github.com/Hafro/gadget2';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
+              <a class = "shortTitle" href= https://sizespectrum.org/mizer/index.html target= "_blank"> MIZER </a>
+              <div class = "longTitle">Multi-species size spectrum modelling in R</div>
+              <div class = "modelType">Model</div>
+              <div class = "modelType">Multi-Species Size-Spectrum</div>
+
+
+              <div class = "release"><img alt="GitHub release (latest by date)" src= "https://img.shields.io/github/v/release/sizespectrum/mizer?color=%230093D0&include_prereleases"></div>
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                 <button class = "icon_small down" onclick="location.href='https://cloud.r-project.org/package=mizer';" value="download app" ></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='https://github.com/sizespectrum/mizer/';" value="Go to online app" ></button>
 
 
                <!--   -->
@@ -445,6 +490,48 @@
                 <!--  -->
 
                  <button class = "icon_small external_active " ></button>
+
+
+
+              </div>
+
+
+          </div>
+
+          <div class = "box">
+
+
+
+              <a class = "shortTitle" href= https://github.com/NOAA-EDAB/Rpath/wiki target= "_blank"> RPATH </a>
+              <div class = "longTitle">R implementation of the Ecopath with Ecosim</div>
+              <div class = "modelType"></div>
+              <div class = "modelType">mass balance food web algorithm</div>
+
+
+              <div class = "language"></div>
+              <div class = "iconrow">
+
+                 <button class = "icon_small online" disabled></button>
+
+
+
+                  <button class = "icon_small down" disabled></button>
+
+
+
+                 <button class = "icon_small github" onclick="location.href='https://github.com/NOAA-EDAB/Rpath';" value="Go to online app" ></button>
+
+
+               <!--   -->
+
+                <button class = "icon_small cert" disabled></button>
+
+
+
+                  <button class = "icon_small cert" disabled></button>
+                <!--  -->
+
+                 <button class = "icon_small internal_active " ></button>
 
 
 
